# Track3d.AI

./: .replit  .sri  README.md  app.py  auth.py  data_utils.py  database.py  db_utils.py  flask_app.py  init_db.py  material_data.py  model.py  projects.py  pyproject.toml  requirements.txt  visualization.py
templates/: comparisons.html  edit_project.html  index.html  material_detail.html  project_detail.html  projects.html
