[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "streamlit-extras>=0.7.1",
    "streamlit>=1.45.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "streamlit-option-menu>=0.4.0",
]
